# GenGL

./: .clauderules  .gitignore  CMakeLists.txt  Context.md  README.md  build_linux.sh  build_macos.sh  build_windows.bat
assets/shaders/: basic.fs  basic.vs
include/renderer/: mesh.h  model.h
src/: main.cpp
src/core/: application.cpp  application.h  window.cpp  window.h
src/renderer/: mesh.cpp  model.cpp  shader.cpp  shader.h
src/utils/: platform_utils.h
